# TaskMaster

./: docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1ad72c78a7c8_update_tables.py  389cb771d297_initial_talbe.py  666ebe351814_initial_talbe.py  ec93160de5ed_initial_tables.py
app/core/: config.py
app/db/: engine.py
app/handlers/: reminders.py  settings.py  tasks.py
app/keyboards/: keyboards.py
app/reminder/model/: reminder_model.py
app/task/model/: task_model.py
app/user/model/: user_model.py
app/user/services/: user_services.py
