[project]
name = "taskmaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stasfomcenko5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
